# src/core/api/to_de_taxi/services/taxista.service.ts
@@ -23,6 +23,7 @@ class TaxistaService extends __BaseService {
   static readonly ApiV1TaxistaByIdGetPath = '/api/v1/Taxista/{id}';
   static readonly ApiV1TaxistaByIdDeletePath = '/api/v1/Taxista/{id}';
   static readonly ApiV1TaxistaConsultaIdTaxistaByIdGetPath = '/api/v1/Taxista/consulta_id_taxista/{id}';
+  static readonly ApiV1TaxistaMarcarTaxistaDisponivelByIdGetPath = '/api/v1/Taxista/marcar_taxista_disponivel/{id}';
   static readonly ApiV1TaxistaByIdVeiculosGetPath = '/api/v1/Taxista/{id}/veiculos';
 
   constructor(
@@ -246,6 +247,53 @@ class TaxistaService extends __BaseService {
   }
 
   /**
+   * @param params The `TaxistaService.ApiV1TaxistaMarcarTaxistaDisponivelByIdGetParams` containing the following parameters:
+   *
+   * - `id`: User Id from taxist
+   *
+   * - `disponivel`:
+   *
+   * @return Success
+   */
+  ApiV1TaxistaMarcarTaxistaDisponivelByIdGetResponse(params: TaxistaService.ApiV1TaxistaMarcarTaxistaDisponivelByIdGetParams): __Observable<__StrictHttpResponse<ResponseBoolean>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+
+    if (params.disponivel != null) __params = __params.set('disponivel', params.disponivel.toString());
+    let req = new HttpRequest<any>(
+      'GET',
+      this.rootUrl + `/api/v1/Taxista/marcar_taxista_disponivel/${params.id}`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      __filter(_r => _r instanceof HttpResponse),
+      __map((_r) => {
+        return _r as __StrictHttpResponse<ResponseBoolean>;
+      })
+    );
+  }
+  /**
+   * @param params The `TaxistaService.ApiV1TaxistaMarcarTaxistaDisponivelByIdGetParams` containing the following parameters:
+   *
+   * - `id`: User Id from taxist
+   *
+   * - `disponivel`:
+   *
+   * @return Success
+   */
+  ApiV1TaxistaMarcarTaxistaDisponivelByIdGet(params: TaxistaService.ApiV1TaxistaMarcarTaxistaDisponivelByIdGetParams): __Observable<ResponseBoolean> {
+    return this.ApiV1TaxistaMarcarTaxistaDisponivelByIdGetResponse(params).pipe(
+      __map(_r => _r.body as ResponseBoolean)
+    );
+  }
+
+  /**
    * @param id ID do taxista
    * @return Success
    */
@@ -283,6 +331,18 @@ class TaxistaService extends __BaseService {
 }
 
 module TaxistaService {
+
+  /**
+   * Parameters for ApiV1TaxistaMarcarTaxistaDisponivelByIdGet
+   */
+  export interface ApiV1TaxistaMarcarTaxistaDisponivelByIdGetParams {
+
+    /**
+     * User Id from taxist
+     */
+    id: string;
+    disponivel?: boolean;
+  }
 }
 
 export { TaxistaService }
