# src/core/api/to_de_taxi/swagger.json
@@ -4384,6 +4384,58 @@
         ]
       }
     },
+    "/api/v1/Taxista/marcar_taxista_disponivel/{id}": {
+      "get": {
+        "tags": [
+          "Taxista"
+        ],
+        "summary": "Get by IdUser",
+        "operationId": "ApiV1TaxistaMarcar_taxista_disponivelByIdGet",
+        "consumes": [],
+        "produces": [
+          "text/plain",
+          "application/json",
+          "text/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User Id from taxist",
+            "required": true,
+            "type": "string",
+            "format": "uuid"
+          },
+          {
+            "name": "disponivel",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "$ref": "#/definitions/Response[Boolean]"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        },
+        "security": [
+          {
+            "oauth2": [
+              "demo_api"
+            ]
+          }
+        ]
+      }
+    },
     "/api/v1/Taxista/{id}/veiculos": {
       "get": {
         "tags": [
